# vector-memories

./: README.md
weaviate-test/: docker-compose.yml  pyproject.toml
weaviate-test/weaviate_sample/: add_batch_sample.py  const.py  get_data.py  query_data.py
